kube/08/ingress/pay.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pay-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pay
  template:
    metadata:
      name: pay-pod
      labels:
        app: pay
    spec:
      containers:
      - name: pod-container
        image: whatwant/node-web:2.0
        ports:
        - containerPort: 8080


---
kind: Service
apiVersion: v1
metadata:
  name: pay-service
spec:
  type: ClusterIP
  # clusterIP: 10.100.10.10
  selector:
    app: pay
  ports:
  - port: 80
    targetPort: 8080
